cmake_minimum_required(VERSION 3.26)
project(LAB4)

set(CMAKE_CXX_STANDARD 14)

add_executable(LAB4
        problem1.cpp
        problem5.cpp
        problem5.h)
add_executable(problem2 problem2.cpp)
add_executable(problem3 problem3.cpp)
add_executable(problem4 problem4.cpp problem4.h)
add_executable(problem5 problem5.h)
